# tiny

./: Cargo.toml  README.md
src/: error.rs  ir.rs  lexer.rs  lib.rs  parser.rs
src/ast/: mod.rs  visit.rs
src/config/: error.rs  mod.rs
src/ir/: block.rs  dot.rs  gen.rs  inheriting_hashmap.rs  instruction.rs  mod.rs  ssa.rs
src/lexer/: error.rs  mod.rs
src/parser/: body.rs  error.rs  mod.rs
src/parsera/: body.rs  mod.rs
tests/: dot_gen.rs  ir_body_gen.rs  ir_gen_repo.rs  mod.rs
tests/class_tests/: big.dot  big.tiny  commutative_cse.dot  commutative_cse.tiny  complex_example.dot  complex_void_call.dot  complex_void_call.tiny  copy_propogation.dot  copy_propogation.tiny  copy_propogation_loop.dot  copy_propogation_loop.tiny  empty_func.dot  empty_func.tiny  fibonacci.dot  fibonacci.tiny  func_2x.dot  func_2x.tiny  gcd.dot  gcd.tiny  input_cse.dot  input_cse.tiny  just_add.dot  just_add.tiny  mandelbrot.dot  many_if_in_loop.dot  many_if_in_loop.tiny  mod.rs  nested_if.dot  nested_if.tiny  nested_if_while.dot  nested_if_while.tiny  nested_while.dot  nested_while.tiny  phi_nesting.dot  phi_nesting.tiny  predefined_in_func.dot  predefined_in_func.tiny  simple_func.dot  simple_func.tiny  simple_if_else.dot  (+15 more)
tests/fixtures/: commutative-cse.dot  fibonacci.dot  provided-example.dot  provided-example.tiny
tests/ir_body_gen/: assignment.rs  func_call.rs  if_statement.rs  mod.rs  return_statement.rs  while_statement.rs
