[package]
name = "tiny"
version = "0.1.0"
edition = "2021"
authors = ["Eric Minassian <eric@ericminassian.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
uninlined_format_args = { level = "allow", priority = 1 }

[dev-dependencies]
pretty_assertions = "1.4.0"
